--- a/my_cloud/pubspec.yaml
+++ b/my_cloud/pubspec.yaml
@@ -25,6 +25,13 @@ flutter:
   # The 'pluginClass' and Android 'package' identifiers should not ordinarily
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
+  # the material Icons class.
+  uses-material-design: true
+
+  # To add assets to your application, add an assets section, like this:
+  assets:
+    - images/
+
   plugin:
     platforms:
       android:
